welcome.lessons.welcome.bat.bool1.HasTeen.scala.code
def hasTeen(a:Int, b:Int, c:Int): Boolean = {
  if (a<=19) {
    if (a>=13) {
      return true
    } else return false
  } else return false
}